// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-collapse should render in expanded state 1`] = `
<modus-wc-collapse collapse-id="123" expanded="true">
  <!---->
  <details class="modus-wc-chevron-right modus-wc-collapse modus-wc-collapse-open no-leading-icons" open="">
    <summary class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between modus-wc-min-h-4" id="123-title">
      <div class="modus-wc-summary-main-content">
        <div class="modus-wc-title-main-content">
          <div class="modus-wc-inline-flex modus-wc-items-center modus-wc-title-main-row">
            <modus-wc-icon aria-label="Alert" name="alert"></modus-wc-icon>
            Collapse Title
          </div>
        </div>
        <modus-wc-icon class="modus-wc-collapse-chevron" decorative="" name="expand_more" size="md"></modus-wc-icon>
      </div>
    </summary>
    <div class="description modus-wc-collapse-description modus-wc-font-light modus-wc-text-base">
      Collapse description
    </div>
    <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content">
      <div slot="content">
        Expanded Content
      </div>
    </div>
  </details>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with custom header and content 1`] = `
<modus-wc-collapse collapse-id="123">
  <!---->
  <details class="modus-wc-chevron-right modus-wc-collapse modus-wc-collapse-close no-leading-icons">
    <summary class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between modus-wc-min-h-4" id="123-title">
      <div class="modus-wc-summary-main-content">
        <div class="modus-wc-title-main-content">
          <div slot="header">
            Test Header
          </div>
        </div>
        <modus-wc-icon class="modus-wc-collapse-chevron" decorative="" name="expand_more" size="md"></modus-wc-icon>
      </div>
    </summary>
    <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content">
      <div slot="content">
        Test Content
      </div>
    </div>
  </details>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with custom props 1`] = `
<modus-wc-collapse collapse-id="123" custom-class="test-class" expanded="true" size="sm" variant="ghost">
  <!---->
  <details class="modus-wc-chevron-right modus-wc-collapse modus-wc-collapse-open no-leading-icons test-class" open="">
    <summary class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between modus-wc-min-h-4" id="123-title">
      <div class="modus-wc-summary-main-content">
        <div class="modus-wc-title-main-content">
          <div class="modus-wc-inline-flex modus-wc-items-center modus-wc-title-main-row">
            <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
              <i aria-label="Alert" class="modus-icon-warning modus-wc-icon modus-wc-icon--md" role="img" tabindex="-1" style="mask-image: var(--modus-icon-warning); webkit-mask-image: var(--modus-icon-warning);"></i>
            </modus-wc-icon>
            Collapse Title
          </div>
        </div>
        <modus-wc-icon class="modus-wc-collapse-chevron modus-wc-flex modus-wc-items-center">
          <i aria-hidden="true" class="modus-icon-caret-down modus-wc-icon modus-wc-icon--md" tabindex="-1" style="mask-image: var(--modus-icon-caret-down); webkit-mask-image: var(--modus-icon-caret-down);"></i>
        </modus-wc-icon>
      </div>
    </summary>
    <div class="description modus-wc-collapse-description modus-wc-font-light modus-wc-text-base">
      Collapse description
    </div>
    <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content"></div>
  </details>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with default props 1`] = `
<modus-wc-collapse collapse-id="123">
  <!---->
  <details class="modus-wc-chevron-right modus-wc-collapse modus-wc-collapse-close no-leading-icons">
    <summary class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between modus-wc-min-h-4" id="123-title">
      <div class="modus-wc-summary-main-content">
        <div class="modus-wc-title-main-content"></div>
        <modus-wc-icon class="modus-wc-collapse-chevron" decorative="" name="expand_more" size="md"></modus-wc-icon>
      </div>
    </summary>
    <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content"></div>
  </details>
</modus-wc-collapse>
`;
